2.35 2021-09-09
- ignore GEGL-WARNING too
- use less-obsolete PDL->get_convertedpdl API

2.34 2021-04-17
- updated constants to GIMP 2.10 versions
- remove menu path up to last / and call gimp_plugin_menu_register with that
- updated scripts to 2.10 PDB calls

2.33 2019-04-11
 - Makefile.PL survive non-conf deps so can say what deps are
 - update metadata

2.32 2016-05-08

    [API]
    - Add on_proc hook called in lib mode only
    - Correctly handle returning of selected vals for storing
    - Add code param to UI::interact

    [Doc]
    - Update examples README with updated tutorial location

    [Plugins]
    - Perl-Console now runs commands on startup.

    [Build]
    - update to proper Changes format
    - update to use EUMM XSMULTI
    - remove from MANIFEST MYMETA.* (oops)
    - Move build system to using Alien::Gimp, unify typemaps
    - Reduce false positives in make setver.
    - dist target doesn't need gzip specified.
    - make parallel test run faster by starting slow ones first
    - specify dependencies better

    [Bug fixes]
    - Avoid 5.21 sprintf warnings if no %d
    - Avoid uninit warning
    - If too many args to PDB call, report how many right.
    - make t/02-netplugin.t ignore RANDR error
    - force locale as 5.20.0 in de_DE fails on "use 5.006_001"

2.31_07 2016-05-07

    Build:
    - fixes to configure-time dependencies

2.31_06 2016-05-07

    Bug fixes:
    - force locale as 5.20.0 in de_DE fails on "use 5.006_001"

2.31_05 2016-05-05

    Build:
    - include updated Changes

2.31_04 2016-05-05

    Build:
    - specify *_REQUIRES better

2.31_03 2016-05-02

    Bug fixes:
    - make t/02-netplugin.t ignore RANDR error correctly

2.31_02 2016-05-02

    Bug fixes:
    - reduce hardcoding in t/02-netplugin.t
    - make t/02-netplugin.t ignore RANDR error

2.31_01 2016-05-01

    API:
    - Add on_proc hook called in lib mode only
    - Correctly handle returning of selected vals for storing
    - Add code param to UI::interact
